# lab-schedule-fastapi-app

./: README.md  init_db.py  lab_scheduler.db  main.py  pyproject.toml  render.yaml  requirements.txt  setup.sh  test_register_admin.py  test_student_add.py
static/css/: style.css
static/js/: admin.js  app.js  student.js
templates/: admin.html  index.html  register.html  student.html
