[project]
name = "lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.2",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "python-socketio>=5.14.2",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.37.0",
    "websockets>=15.0.1",
]
